--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2650,22 +2650,26 @@
         }
       }
     }
+    function getGeomMean(freqArray) {
+      let arrProd = 1;
+      for (let i = 0; i < freqArray.length; i++) {
+        arrProd *= freqArray[i];
+      }
+      return Math.pow(arrProd, 1 / freqArray.length);
+    }
     async function optimizeSubDelay() {
       console.log("Optimizing subwoofer delay for ALL speakers...");
       const mlpSPIndices = [];
       for (let i = 1; i <= nSpeakers; i++) {
         mlpSPIndices.push(cmdIdMLPIndices[commandId[i]]);
       }
-      const alignXO = Math.sqrt(minXO * maxXO); // geometric mean of usable XO range
+      const alignXO = getGeomMean(customCrossover.slice(1)); // average initial XO
       const avgSpeaker = await postNext('Magn plus phase average', Array.from(mlpSPIndices));
       const avgSpeakerIdx = Object.keys(avgSpeaker.results)[0]
       const avgSpeakerWithHPF = await genSpeaker(avgSpeakerIdx, alignXO);
       const avgSpeakerWithHPFIdx = Object.keys(avgSpeakerWithHPF.results)[0];
       const subwooferWithLPF = await genSub(cmdIdMLPIndices[commandId[nChannels]], alignXO);
       const subwooferWithLPFIdx = Object.keys(subwooferWithLPF.results)[0];
-      // use min <-> max XO plus an octave on either side to set evaluation range
-      const startFreq = Math.round(minXO / 2);
-      const endFreq = Math.round(maxXO * 2);
       // set delay limits based on first IR peak delta to prioritize time alignment
       const subwooferIRPeak = await getFirstIRPeak(subwooferWithLPFIdx); // first IR peak
       const IRPeakDelta = -1000 * subwooferIRPeak; // speakers are at t=0 by now
@@ -2676,7 +2680,6 @@
       loDelayLimit = Math.min(Math.max(loDelayLimit, loDelay), hiDelay);
       hiDelayLimit = Math.min(Math.max(hiDelayLimit, loDelay), hiDelay);
       const [requiredDelay, isInverted] = await align4system(avgSpeakerWithHPFIdx, subwooferWithLPFIdx,
-                                                             startFreq, endFreq,
                                                              loDelayLimit, hiDelayLimit,
                                                              alignXO);
       // cleanup in reverse order of creation
@@ -3205,9 +3208,12 @@
         }
       }
     }
-    async function align4system(ind1, ind2, start, end, loDelay, hiDelay, xo) {
+    async function align4system(ind1, ind2, loDelay, hiDelay, alignXO) {
       console.info(`Proximity based delay range: ${loDelay.toFixed(2)}ms <-> ${hiDelay.toFixed(2)}ms`);
-      console.info(`Alignment frequency (mean usable XO): ${xo.toFixed(2)}hz`);
+      console.info(`Alignment frequency (average initial XO): ${alignXO.toFixed(2)}hz`);
+      // use an octave on either side of the alignment XO as evaluation range
+      const start = Math.round(alignXO / 2);
+      const end = Math.round(alignXO * 2);
       let isInverted = false, requiredDelay = NaN, maxSum = -Infinity;
       await postNext('Smooth', ind1, { smoothing: "1/48" });
       await postNext('Smooth', ind2, { smoothing: "1/48" });
@@ -3216,8 +3222,8 @@
       await postSafe("http://localhost:4735/alignment-tool/index-b", ind2, "selected as measurement B");
       await postSafe("http://localhost:4735/alignment-tool/remove-time-delay", false, "Value set"); // prevents messing with delays
       // make sure level differences do not affect alignment; no need to revert since these temp measurements will only be deleted
-      const gainA = 75.0 - await getSPL(ind1, Math.round(xo), end); // average speaker
-      const gainB = 75.0 - await getSPL(ind2, start, Math.round(xo)); // average subwoofer
+      const gainA = 75.0 - await getSPL(ind1, Math.round(alignXO), end); // average speaker
+      const gainB = 75.0 - await getSPL(ind2, start, Math.round(alignXO)); // subwoofer
       await postSafe("http://localhost:4735/alignment-tool/gain-a", gainA, "Value set");
       await postSafe("http://localhost:4735/alignment-tool/gain-b", gainB, "Value set");
       console.info("Starting...")
